@@ -241,6 +241,8 @@ Changes since 2.2.2
 101. modules/png-module.c: Use png_set_expand_gray_1_2_4_to_8 instead
      of png_set_gray_1_2_4_to_8 if available (patch forwarded from Marco
      Atzeri).
+102. src/slcommon.c: Code using __libc_enable_secure was removed
+     (patch forwarded from Marco Atzeri)
 
 {{{ Previous Versions
 
